workspace-sf/force-app/main/default/objects/OpcaoPagamento__c/OpcaoPagamento__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as opções de pagamento oferecidas ao cliente na proposta</description>
    <label>Opção de pagamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opções de pagamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>