workspace-sf/force-app/main/default/objects/OpcaoPagamento__c/fields/CustoApolice__c.field-meta.xml
<CustomField>
    <fullName>CustoApolice__c</fullName>
    <label>Custo da apólice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>