workspace-sf/force-app/main/default/objects/OpcaoPagamento__c/fields/Encargos__c.field-meta.xml
<CustomField>
    <fullName>Encargos__c</fullName>
    <label>Encargos</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>