workspace-sf/force-app/main/default/objects/OpcaoPagamento__c/fields/Iof__c.field-meta.xml
<CustomField>
    <fullName>Iof__c</fullName>
    <label>IOF</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>