workspace-sf/force-app/main/default/objects/OpcaoPagamento__c/fields/Orcamento__c.field-meta.xml
<CustomField>
    <fullName>Orcamento__c</fullName>
    <label>Orçamento</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opções de pagamento</relationshipLabel>
    <relationshipName>OpcoesPagamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>