workspace-sf/force-app/main/default/objects/OpcaoPagamento__c/fields/ValorParcela__c.field-meta.xml
<CustomField>
    <fullName>ValorParcela__c</fullName>
    <label>Valor da parcela</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>